--- a/charts.html
+++ b/charts.html
@@ -72,7 +72,7 @@
                 How is the COVID-19 pandemic affecting
                 <select id = "metrics">
                     <!-- <option value="classes_cancelled">class cancellation</option> -->
-                    <!-- <option value="spend_credit">credit card/loan spending</option> -->
+                    <option value="spend_credit">credit card/loan spending</option>
                     <option value="inc_loss">employment income loss</option>
                     <option value="expect_inc_loss">expected employment income loss</option>
                     <option value="food_insufficient" selected="selected">food insufficiency</option>
@@ -86,6 +86,8 @@
                     <option value="spend_ui">UI benefit spending</option>
                     <option value="mortgage_not_conf">upcoming mortgage payments</option>
                     <option value="rent_not_conf">upcoming rent payments</option>
+                    <option value="rent_caughtup">previous mortgage payments</option>
+                    <option value="mortgage_caughtup">previous rent payments</option>
                     <!-- <option value="stimulus_expenses">use of stimulus for expenses</option> -->
                 </select>
                 in different communities?
