Fix bug where previous mortgage payment was showing rent and vice versa

--- a/charts.html
+++ b/charts.html
@@ -77,8 +77,8 @@
                     <option value="food_insufficient" selected="selected">food insufficiency</option>
                     <option value="uninsured">health insurance coverage</option>
                     <option value="depression_anxiety_signs">mental health</option>
-                    <option value="rent_caughtup">previous mortgage payments</option>
-                    <option value="mortgage_caughtup">previous rent payments</option>
+                    <option value="mortgage_caughtup">previous mortgage payments</option>
+                    <option value="rent_caughtup">previous rent payments</option>
                     <option value="insured_public">public health insurance coverage</option>
                     <option value="spend_savings">savings spending</option>
                     <option value="spend_stimulus">stimulus payment spending</option>
