dummy data testing out squished

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="navList">
 <head>
+    <style>
+       .container{
+            max-width: 1020px;
+        }
+    </style>
 
     <title>Census PULSE feature</title>
     <meta charset="utf-8">
