update x axis to have gaps

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script src="js/vendor/pym.v1.min.js"></script>
     <script src="js/vendor/jquery-1.9.1.min.js"></script>
+    <script src="js/vendor/moment.min.js"></script>
 
     <script>
         var pymParent = new pym.Parent("charts", "charts.html", {});
