--- a/charts.html
+++ b/charts.html
@@ -258,6 +258,7 @@
         <script src="js/vendor/d3.v4.min.js"></script>
         <script src="js/vendor/jquery-1.9.1.min.js"></script>
         <script src="js/vendor/jquery-ui.js"></script>
+        <script src="js/vendor/moment.min.js"></script>
         <script src="js/chartTitles.js"></script>
         <script src="js/trendDescriptions.js"></script>
         <script src="js/drawCharts.js"></script>
